<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/px370"
        android:layout_height="@dimen/px100"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/px248"
        android:layout_marginTop="@dimen/px308"
        android:contentDescription="@null"
        android:src="@mipmap/bg_logo" />


    <EditText
        android:id="@id/edt_phone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px122"
        android:layout_marginLeft="@dimen/px44"
        android:layout_marginRight="@dimen/px44"
        android:background="@drawable/btn_selector_gray"
        android:drawableLeft="@mipmap/icon_hint_phone"
        android:drawablePadding="@dimen/px20"
        android:hint="@string/input_phone"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:lines="1"
        android:maxLength="11"
        android:paddingEnd="@dimen/px30"
        android:paddingStart="@dimen/px30"
        android:textColorHint="@color/hint_gray"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/px34" />


    <EditText
        android:id="@id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px122"
        android:layout_marginLeft="@dimen/px44"
        android:layout_marginRight="@dimen/px44"
        android:layout_marginTop="@dimen/px14"
        android:background="@drawable/btn_selector_gray"
        android:drawableLeft="@mipmap/icon_hint_password"
        android:drawablePadding="@dimen/px20"
        android:hint="@string/input_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:lines="1"
        android:paddingEnd="@dimen/px30"
        android:paddingStart="@dimen/px30"
        android:textColorHint="@color/hint_gray"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/px34" />

    <Button
        android:id="@id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/px122"
        android:layout_marginLeft="@dimen/px44"
        android:layout_marginRight="@dimen/px44"
        android:layout_marginTop="@dimen/px65"
        android:background="@drawable/btn_selector_gray"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/px40" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@id/tv_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px65"
            android:text="@string/reg_account"
            android:paddingTop="@dimen/px35"
            android:paddingBottom="@dimen/px35"
            android:textColor="@color/text_orange"
            android:textSize="@dimen/px40" />

        <TextView
            android:id="@id/tv_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/px65"
            android:text="@string/help"
            android:paddingTop="@dimen/px35"
            android:paddingBottom="@dimen/px35"
            android:textColor="@color/text_orange"
            android:textSize="@dimen/px40"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>
</LinearLayout>